--- a/pages/auth/auth.wxml
+++ b/pages/auth/auth.wxml
@@ -1,2 +1,2 @@
 <!--pages/auth/auth.wxml-->
-<text>pages/auth/auth.wxml</text>
+<button open-type="getUserInfo" plain type="primary" style="width:100%">获取用户信息</button>
