--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -1,2 +1,22 @@
-<!--pages/categrory/category.wxml-->
-<text>pages/categrory/category.wxml</text>
+<view class="category">
+    <SreachInput/>
+    <view class="nav-list">
+        <scroll-view scroll-y class="list-left">
+            <view class="{{currentIndex==index?'active':'list-left-item'}}" wx:for="{{leftListData}}" wx:key="*this" bindtap="listToggle" data-index="{{index}}">
+                {{item}}
+            </view>
+        </scroll-view>
+        <scroll-view scroll-y scroll-top="{{scrollTop}}" class="list-right">
+            <view class="right-item" wx:for="{{rightListData}}" wx:key="index">
+                <view class="right-item-title">{{item.cat_name}}</view>
+                <view class="right-item-product">
+                    <navigator url="/pages/goods_list/goods_list?cid={{item1.cat_id}}"open-type="navigate" wx:for="{{item.children}}" wx:for-item="item1" wx:key="cat_id">
+                        <image src="{{item1.cat_icon}}" mode="widthFix" lazy-load="false">
+                        </image>
+                        <view>{{item1.cat_name}}</view>
+                    </navigator>
+                </view>
+            </view>
+        </scroll-view>
+    </view>
+</view>
