--- a/pages/goods_detail/goods_detail.wxss
+++ b/pages/goods_detail/goods_detail.wxss
@@ -1,1 +1,68 @@
-/* pages/goods_detail/goods_detail.wxss */
+.goods_detail {
+  position: relative;
+  padding-bottom: 100rpx;
+}
+swiper {
+  height: 60vw;
+  text-align: center;
+}
+swiper swiper-item image {
+  width: 60%;
+}
+.goods-info {
+  padding: 10rpx;
+  border-bottom: 8rpx solid #ccc;
+}
+.goods-info .good_price {
+  color: var(--themeColor);
+  font-size: 40rpx;
+}
+.goods-info .good_name {
+  display: flex;
+  margin: 20rpx 0;
+}
+.goods-info .good_name .name {
+  flex: 8;
+}
+.goods-info .good_name .iconfont {
+  flex: 2;
+  text-align: center;
+}
+.img-detail-title {
+  font-size: 40rpx;
+  color: var(--themeColor);
+  padding: 20rpx 10rpx;
+  border-bottom: 8rpx solid #ddd;
+}
+.bottom-bar {
+  height: 100rpx;
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+}
+.bottom-bar .bottom-left,
+.bottom-bar .bottom-right {
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+.bottom-bar .bottom-left view,
+.bottom-bar .bottom-right view {
+  flex: 1;
+  padding: 0 10rpx;
+  text-align: center;
+}
+.bottom-bar .bottom-right .add-cart {
+  background-color: orange;
+  height: 100%;
+  line-height: 100rpx;
+}
+.bottom-bar .bottom-right .shop {
+  background-color: var(--themeColor);
+  height: 100%;
+  line-height: 100rpx;
+}
