--- a/pages/goods_list/goods_list.wxml
+++ b/pages/goods_list/goods_list.wxml
@@ -1,2 +1,20 @@
-<!--pages/goods_list/goods_list.wxml-->
-<text>pages/goods_list/goods_list.wxml</text>
+<view class="goods_list">
+    <SreachInput/>
+    <Tabs tabs="{{tabs}}" bindtabClick="tabClick">
+        <block wx:if="{{tabs[0].isActive}}">
+            <view class="goods">
+                <navigator class="goods-item" wx:for="{{goodsData}}" wx:key="index" url="/pages/goods_detail/goods_detail?goods_id={{item.goods_id}}">
+                    <view class="goods-image">
+                        <image src="{{item.goods_small_logo}}"></image>
+                    </view>
+                    <view class="goods-info">
+                        <view class="goods-name">{{item.goods_name}}</view>
+                        <view class="goods-price">￥{{item.goods_price}}</view>
+                    </view>
+                </navigator>
+            </view>
+        </block>
+        <block wx:elif="{{tabs[1].isActive}}">1</block>
+        <block wx:elif="{{tabs[2].isActive}}">2</block>
+    </Tabs>
+</view>
