--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,33 @@
 <view class="index">
-    <SreachInput>
-    </SreachInput>
+    <SreachInput/>
+    <swiper class="swiper" indicator-dots="true" autoplay="true" interval="2000">
+        <swiper-item wx:for="{{swiperList}}" wx:key="goods_id">
+            <navigator open-type="navigate" url="/pages/goods_detail/goods_detail?goods_id={{item.goods_id}}">
+                <image src="{{item.image_src}}" mode="widthFix">
+                </image>
+            </navigator>
+
+        </swiper-item>
+
+    </swiper>
+    <view class="nav">
+        <navigator open-type="switchTab" wx:for="{{navList}}" wx:key="name" url="/pages/category/category">
+            <image class="" src="{{item.image_src}}" mode="widthFix">
+            </image>
+        </navigator>
+    </view>
+    <view class="floor">
+        <view class="floor-item" wx:for="{{floorList}}" wx:key="index">
+            <view class="title">
+                <image src="{{item.floor_title.image_src}}" mode="widthFix" lazy-load="false">
+                </image>
+            </view>
+            <view class="product_list">
+                <navigator open-type="navigate" wx:for="{{item.product_list}}" wx:for-item="item1" wx:for-index="index1" url="{{item1.navigator_url}}" wx:key="index1">
+                    <image src="{{item1.image_src}}" mode="{{index1===0?'widthFix':'scaleToFill'}}" lazy-load="false">
+                    </image>
+                </navigator>
+            </view>
+        </view>
+    </view>
 </view>
